[gd_scene load_steps=6 format=2]

[ext_resource path="res://Screens/ManageDictionaries.gd" type="Script" id=1]
[ext_resource path="res://res/Wood24.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/Interactive/HeaderContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Interactive/ScrollContainerDraggable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Buttons/MenuButton.tscn" type="PackedScene" id=5]

[node name="ManageDictionaries" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1082.98, 1181.43 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 30.0
margin_right = -40.0
margin_bottom = -30.0

[node name="HeaderContainer" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 584.0

[node name="ScrollContainerDicts" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 54.0
margin_right = 584.0
margin_bottom = 730.0

[node name="VBoxContainerDicts" type="VBoxContainer" parent="VBoxContainer/ScrollContainerDicts"]

[node name="CenterContainerImport" type="CenterContainer" parent="VBoxContainer"]
margin_top = 734.0
margin_right = 584.0
margin_bottom = 810.455

[node name="ButtonImport" parent="VBoxContainer/CenterContainerImport" instance=ExtResource( 5 )]
margin_left = 242.0
margin_right = 342.0
text_loc = "import"

[node name="CenterContainerDelte" type="CenterContainer" parent="VBoxContainer"]
margin_top = 814.0
margin_right = 584.0
margin_bottom = 890.455

[node name="ButtonDelete" parent="VBoxContainer/CenterContainerDelte" instance=ExtResource( 5 )]
margin_left = 242.0
margin_right = 342.0
text_loc = "delete"
[connection signal="pressed" from="VBoxContainer/CenterContainerImport/ButtonImport" to="." method="_on_ButtonImport_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainerDelte/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
